[package]
name = "exti-sentry"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "s"

[dependencies]
shield = { git = "https://github.com/r3dlight/shield"}
#sentry-uapi = { git = "https://github.com/camelot-os/sentry-kernel/"}

[build-dependencies]
camelot_metadata =  {git = "https://github.com/camelot-os/sentry-package-metadata"}
